--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,3 +3,7 @@
 @import "./layout/header";
 @import "./utils/mixins";
 @import "./utils/variables";
+@import "./layout/navigations";
+@import "./layout/footer";
+@import "./pages/home";
+@import "./components/button"
