--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,10 +1,12 @@
 // COLORS
 
-$text-dark:#252525;
-$primary-color:#e7ab3c; 
-$border-color:1px solid #e5e5e5; 
+$text-dark: #252525;
+$dark-grey: #3b3b3b;
+$grey-color: #4c4c4c;
+$primary-color: #e7ab3c;
+$border-color: 1px solid #e5e5e5;
 
 // FONT SIZE
-$title-fontSize:72px;
 
-$subTitle-fontSize:18px;
+$title-fontSize: 72px;
+$subTitle-fontSize: 18px;
