--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 @import "../utils/variables";
 @import "../utils/mixins";
 .header-one {
+  font-size: $subTitle-fontSize;
   border-bottom: $border-color;
   width: 100%;
   &__left {
@@ -64,4 +65,69 @@
   }
 }
 
+.header-two {
+  width: 100%;
+  padding: 40px 0;
 
+  .row {
+    @include text-center($jcc: space-between);
+  }
+
+  &__logo {
+    @include text-center($jcc: start);
+
+    border: none;
+  
+    padding-top: 11px;
+    padding-bottom: 13px;
+    padding-right: 60px;
+    font-size: 16px;
+    color: #252525;
+  }
+
+  &__middle {
+    &__search {
+      
+      @include text-center($jcc: start);
+
+      border: $border-color;
+      a {
+        float: left;
+        background: transparent;
+
+        padding-left: 23px;
+        padding-top: 11px;
+        padding-bottom: 13px;
+        padding-right: 60px;
+        font-size: 16px;
+        color: #252525;
+      }
+      input {
+        width: 400px;
+
+        height: 100%;
+        border: none;
+        border-left: $border-color;
+        padding-left: 10px;
+        outline: none;
+      }
+
+      i {
+        padding: 13px;
+        height: 100%;
+        background-color: $primary-color;
+        color: white;
+      }
+    }
+  }
+  
+  &__right__icons{
+      padding: 10px 0;
+      span{
+        font-size: 18px;
+    font-weight: 700;
+    color: #252525;
+      }
+  }
+
+}
